## This is a automake file, part of Unidata's netCDF package.
# Copyright 2007, see the COPYRIGHT file for more information.

# Include the .NET stuff.

# $Id: Makefile.am,v 1.1 2007/04/25 15:57:09 ed Exp $

EXTRA_DIST = app.ico AssemblyInfo.cpp Form1.cpp Form1.resX stdafx.cpp	\
tst_netcdf.vcproj app.rc Form1.h stdafx.h
